--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <maven.compiler.version>3.7.0</maven.compiler.version>
         <jansi.version>1.16</jansi.version>
         <annotations.version>13.0</annotations.version>
-        <commons-io.version>2.5</commons-io.version>
+        <aws-java-sdk-s3.version>1.11.250</aws-java-sdk-s3.version>
     </properties>
 
     <build>
@@ -65,6 +65,13 @@
             <groupId>org.fusesource.jansi</groupId>
             <artifactId>jansi</artifactId>
             <version>${jansi.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>${aws-java-sdk-s3.version}</version>
         </dependency>
     </dependencies>
 
