--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.dvsa.testing.lib</groupId>
     <artifactId>active-support</artifactId>
-    <version>0.8.2</version>
+    <version>0.9</version>
 
     <repositories>
         <repository>
@@ -28,6 +28,9 @@
         <jansi.version>1.16</jansi.version>
         <annotations.version>13.0</annotations.version>
         <aws-java-sdk-s3.version>1.11.250</aws-java-sdk-s3.version>
+        <ant.version>1.10.1</ant.version>
+        <mysql-connector-java.version>8.0.8-dmr</mysql-connector-java.version>
+        <dbunit.version>2.5.4</dbunit.version>
     </properties>
 
     <build>
@@ -80,6 +83,38 @@
             <artifactId>aws-java-sdk-s3</artifactId>
             <version>${aws-java-sdk-s3.version}</version>
         </dependency>
+
+
+    <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
+    <dependency>
+        <groupId>org.dbunit</groupId>
+        <artifactId>dbunit</artifactId>
+        <version>${dbunit.version}</version>
+    </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql-connector-java.version}</version>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
+        <dependency>
+            <groupId>org.apache.ant</groupId>
+            <artifactId>ant</artifactId>
+            <version>${ant.version}</version>
+        </dependency>
+
     </dependencies>
 
+
 </project>
+
+
+
+
+
+
+
