--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,10 @@
     </distributionManagement>
 
     <properties>
+        <httpclient.version>4.5.5</httpclient.version>
+        <jackson-core.version>2.9.3</jackson-core.version>
+        <jackson-databind>2.9.4</jackson-databind>
+        <jackson-annotations.version>2.9.4</jackson-annotations.version>
         <junit.version>4.12</junit.version>
         <maven.compiler.version>3.7.0</maven.compiler.version>
         <jansi.version>1.16</jansi.version>
@@ -30,6 +34,7 @@
         <aws-java-sdk-s3.version>1.11.271</aws-java-sdk-s3.version>
         <mysql-connector-java.version>8.0.8-dmr</mysql-connector-java.version>
         <dbunit.version>2.5.4</dbunit.version>
+        <jenkins-client.version>0.3.7</jenkins-client.version>
     </properties>
 
     <build>
@@ -58,28 +63,28 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.5.5</version>
+            <version>${httpclient.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.9.3</version>
+            <version>${jackson-core.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.9.4</version>
+            <version>${jackson-databind}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>2.9.4</version>
+            <version>${jackson-annotations.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/junit/junit -->
@@ -127,7 +132,7 @@
         <dependency>
             <groupId>com.offbytwo.jenkins</groupId>
             <artifactId>jenkins-client</artifactId>
-            <version>0.3.7</version>
+            <version>${jenkins-client.version}</version>
         </dependency>
     </dependencies>
 </project>
