--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <mysql-connector-java.version>8.0.8-dmr</mysql-connector-java.version>
         <dbunit.version>2.5.4</dbunit.version>
         <jenkins-client.version>0.3.7</jenkins-client.version>
+        <rest-assured.version>3.0.7</rest-assured.version>
     </properties>
 
     <build>
@@ -134,5 +135,12 @@
             <artifactId>jenkins-client</artifactId>
             <version>${jenkins-client.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>${rest-assured.version}</version>
+        </dependency>
+
     </dependencies>
 </project>
