--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.dvsa.testing.lib</groupId>
     <artifactId>active-support</artifactId>
-    <version>1.2.2</version>
+    <version>1.2.3</version>
 
     <repositories>
         <repository>
@@ -36,6 +36,7 @@
         <dbunit.version>2.5.4</dbunit.version>
         <jenkins-client.version>0.3.7</jenkins-client.version>
         <rest-assured.version>3.0.7</rest-assured.version>
+        <jsch.version>0.1.54</jsch.version>
     </properties>
 
     <build>
@@ -140,6 +141,12 @@
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
             <version>${rest-assured.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>${jsch.version}</version>
         </dependency>
 
     </dependencies>
