updated PATCH version

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.dvsa.testing.lib</groupId>
     <artifactId>active-support</artifactId>
-    <version>1.2.2X</version>
+    <version>1.2.4</version>
 
     <repositories>
         <repository>
