--- a/pom.xml
+++ b/pom.xml
@@ -6,19 +6,19 @@
 
     <groupId>org.dvsa.testing.lib</groupId>
     <artifactId>active-support</artifactId>
-    <version>1.3.1</version>
+    <version>1.3.2</version>
 
     <repositories>
         <repository>
             <id>devappci-shd-pri-qarepo</id>
-            <url>s3://devappci-shd-pri-qarepo</url>
+            <activesupport.url>s3://devappci-shd-pri-qarepo</activesupport.url>
         </repository>
     </repositories>
 
     <distributionManagement>
         <repository>
             <id>devappci-shd-pri-qarepo</id>
-            <url>s3://devappci-shd-pri-qarepo</url>
+            <activesupport.url>s3://devappci-shd-pri-qarepo</activesupport.url>
         </repository>
     </distributionManagement>
 
